--- a/css/style.css
+++ b/css/style.css
@@ -166,4 +166,325 @@ header{
 
 .categories__right{
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.2rem;
+}
+
+.category{
+    background-color: var(--color-bg2);
+    padding: 2rem;
+    border-radius: 2rem;
+    transition: var(--transition);
+}
+
+.category:hover{
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+
+.category__icon{
+    background-color: var(--color-primary);
+    padding: 0.7rem;
+    border-radius: 0.9rem;
+}
+
+.category:nth-child(2) .category__icon{
+    background: var(--color-danger);
+}
+
+.category:nth-child(3) .category__icon{
+    background: var(--color-success);
+}
+
+.category:nth-child(4) .category__icon{
+    background: var(--color-warning);
+}
+
+.category:nth-child(5) .category__icon{
+    background: var(--color-success);
+}
+
+.category__icon{
+    background: var(--color-primary);
+    padding: 0.7rem;
+    border-radius: 0.9rem;
+}
+
+.category h{
+    margin: 2rem 0 1rem;
+}
+
+.category p{
+    font-size: 0.58rem;
+}
+
+.services{
+    margin-top: 10rem;
+}
+
+.services__container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.services .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.services .box-container .box{
+    flex: 1 1 30rem;
+    border-radius: 0.5rem;
+    background: var(--color-primary);
+    box-shadow: 0.5rem 1rem rgba(0, 0, 0, 1);
+    border: 1rem solid rgba(0, 0, 0, 2);
+    text-align: center;
+    padding: 2rem;
+}
+
+.services .box-container .box p{
+    font-size: 1.5rem;
+    color: #666;
+    padding: 5rem 0;
+    line-height: 2;
+}
+
+.faqs__container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+}
+
+.faq{
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    gap: 1.4em;
+    height: fit-content;
+    background: var(--color-primary);
+    cursor: pointer;
+}
+
+.faq h4{
+    font-size: 1rem;
+    line-height: 1.2rem;
+}
+
+.faq__icon{
+    align-self: flex-start;
+    font-size: 1.2rem;
+}
+
+.faq p{
+    margin-top: 0.8rem;
+    display: none;
+}
+
+.faq.open p{
+    display: block;
+}
+
+.testimonials__container{
+    overflow-x: hidden;
+    position: relative;
+    margin-bottom: 5rem;
+}
+
+.testimonials{
+    padding-top: 2rem;
+}
+
+.avatar{
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto 1rem;
+    border-radius: 1rem solid var(--color-bg1);
+}
+
+.testimonial__info{
+    text-align: center;
+}
+
+.testimonial__body{
+    background: var(--color-primary);
+    padding: 2rem;
+    margin-top: 3rem;
+    position: relative;
+}
+
+.testimonial__body{
+    background: var(--color-primary);
+    padding: 2rem;
+    margin-top: 3rem;
+    position: relative;
+}
+
+.testimonial__body::before{
+    content: '';
+    display: block;
+    background: linear-gradient(
+        -134deg,
+        transparent,
+        var(--color-primary),
+        var(--color-primary),
+        var(--color-primary),
+    );
+    position: absolute;
+    top: -1.5rem;
+    left: 50%;
+    transform: rotate(45deg);
+    width: 3rem;
+    height: 3rem;
+}
+
+@media screen and (max-width: 1024px){
+    .container{
+        width: var(--container-width-md);
+    }
+    h1{
+        font-size: 2.2rem;
+    }
+    h2{
+        font-size: 1.4rem;
+    }
+    h4{
+        font-size: 1.2rem;
+    }
+
+    nav button{
+        display: inline-block;
+        background: transparent;
+        font-size: 1.8rem;
+        color: var(--color-white);
+        cursor: pointer;
+    }
+
+    nav button#close-menu-btn{
+        display: none;
+    }
+    .nav__menu{
+        position: fixed;
+        top: 5rem;
+        right: 5%;
+        height: fit-content;
+        width: 18rem;
+        flex-direction: column;
+        gap: 0;
+        display: none;
+    }
+
+    .nav__menu li{
+        width: 100%;
+        height: 5.8em;
+        animation: animateNavItems 400ms linear forwards;
+        transform-origin: top right;
+        opacity: 0;
+    }
+
+    .nav__menu li:nth-child(2){
+        animation: delay 200ms;
+    }
+    .nav__menu li:nth-child(3){
+        animation: delay 400ms;
+    }
+    .nav__menu li:nth-child(4){
+        animation: delay 600ms;
+    }
+
+    @keyframes animateNavItems {
+        0%{
+            transform: rotateZ(-90deg) rotateX(90deg) scale(0.1);
+        }
+        100%{
+            transform: rotateZ(0deg) rotateX(0deg) scale(0.1);
+            opacity: 1;
+        }
+    }
+    .nav__menu li a{
+        background: var(--color-primary);
+        box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
+        width: 100%;
+        height: 100%;
+        display: grid;
+        place-items: center;
+    }
+    .nav__menu li a:hover{
+        background: var(--color-bg2);
+        color: var(--color-white);
+    }
+
+    header{
+        height: 52vh;
+        margin-bottom: 4rem;
+    }
+    .header__container{
+        gap: 0;
+        padding-bottom: 3rem;
+    }
+    .categories{
+        height: auto;
+    }
+    .categories__container{
+        grid-template-columns: 1fr;
+    }
+    .categories__left{
+        margin-right: 0;
+    }
+    .services{
+        margin-top: 0;
+    }
+    .services__container{
+        grid-template-columns: 1fr;
+    }
+
+    .faqs__container{
+        grid-template-columns: 1fr;
+    }
+    .faq{
+        padding: 1.5rem;
+    }
+    @media screen and (max-width: 600px) {
+        .container{
+            width: var(--container-width-sm);
+        }
+
+        .nav__menu{
+            right: 3%;
+        }
+        .header{
+            height: 100vh;
+        }
+        .header__container{
+            grid-template-columns: 1fr;
+            text-align: center;
+            margin-top: 0;
+        }
+
+        .header__left p{
+            margin-bottom: 1.3rem;
+        }
+        .categories__right{
+            grid-template-columns: 1fr 1fr;
+            gap: 0.7rem;
+        }
+        .category{
+            padding: 1rem;
+            border-radius: 1rem;
+        }
+        .category__icon{
+            margin-top: 4px;
+            display: inline-block;
+        }
+        .courses__container{
+            grid-template-columns: 1fr;
+        }
+
+        .testimonial__body{
+            padding: 1.2rem;
+        }
+    }
 }
