--- a/css/style.css
+++ b/css/style.css
@@ -1,361 +1,60 @@
-*{
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
+:root {
+    --font-size-h1: 2.4rem;
+    --font-size-h2: 2rem;
+    --font-size-h3: 1.6rem;
+    --font-size-h4: 1.2rem;
+    --font-size-h5: 1rem;
+    --line-height-h1: 2.8rem;
+    --line-height-h2: 2.4rem;
+    --line-height-h3: 2rem;
+    --line-height-h4: 1.6rem;
+    --line-height-h5: 1.2rem;
 }
 
-:root{
-    --color-primary: #6c63ff;
-    --color-success: #00bf8e;
-    --color-warning: #f7c94b;
-    --color-danger: #f75842;
-    --color-danger-variant: rgba(247, 88, 66, 0.4);
-    --color-white: #fff;
-    --color-light: rgba(255, 255, 255, 0.7);
-    --color-black: black;
-    --color-bg: #1f2641;
-    --color-bg1: #2e3267;
-    --color-bg2: #424890;
-
-    --container-width-lg: 80%;
-    --container-width-md: 90%;
-    --container-width-sm: 90%;
-
-    --transition: all 400 ease;
+h1 {
+    font-size: var(--font-size-h1);
+    line-height: var(--line-height-h1);
 }
 
-body{
-    font-family: 'Joan', serif;
-    line-height: 1.7;
-    color: var(--color-white);
-    background: var(--color-bg);
+h2 {
+    font-size: var(--font-size-h2);
+    line-height: var(--line-height-h2);
 }
 
-.container{
-    width: var(--container-width-lg);
+h3 {
+    font-size: var(--font-size-h3);
+    line-height: var(--line-height-h3);
+}
+
+h4 {
+    font-size: var(--font-size-h4);
+    line-height: var(--line-height-h4);
+}
+
+.container {
+    max-width: 80%;
     margin: 0 auto;
+    padding: 0 2rem;
 }
 
-section{
-    text-align: center;
-    margin-bottom: 4rem;
-}
-h1,h2,h3,h4,h5{
-    line-height: 2.4rem;
+@media screen and (max-width: 1024px) {
+    .container {
+        max-width: 90%;
+    }
 }
 
-h1{
-    font-size: 2.4rem;
+@media screen and (max-width: 600px) {
+    .container {
+        max-width: 95%;
+    }
 }
 
-h2{
-    font-size: 2rem;
-}
-
-h3{
-    font-size: 13rem;
-}
-
-a{
-    color: var(--color-white);
-}
-
-img{
-    width: 100%;
-    display: block;
-    object-fit: cover;
-}
-
-.btn{
-    display: inline-block;
-    background: var(--color-white);
-    color: var(--color-black);
-    padding: 1rem 2rem;
-    border: 1px solid transparent;
-    font-weight: 500;
-    transition: var(--transition);
-}
-
-.btn-primary{
-    background: var(--color-danger);
-    color: var(--color-white);
-}
-
-nav{
-    background: transparent;
-    width: 100vw;
-    height: 5rem;
-    top: 0;
-    position: fixed;
-    z-index: 11;
-}
-
-.nav__container{
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-}
-
-nav button{
-    display: none;
-}
-.nav__menu{
-    display: flex;
-    align-items: center;
-    gap: 4rem;
-}
-
-.nav__menu a{
-    font-size: 0.9rem;
-    transition: all 400ms ease;
-}
-
-.nav__menu a:hover{
-    color: var(--color-bg2);
-}
-.window-scroll{
-    background: var(--color-primary);
-    box-shadow: black;
-}
-
-header{
-    position: relative;
-    top: 5rem;
-    overflow: hidden;
-    height: 70vh;
-    margin-bottom: 5rem;
-}
-
-.header__container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    gap: 1rem;
-    height: 100%;
-}
-
-.header__left p{
-    margin: 1rem 0 2.4rem;
-}
-
-.categories{
-    background: var(--color-bg1);
-    height: 29rem;
-}
-
-.categories h1{
-    line-height: 1;
-    margin-bottom: 3rem;
-}
-
-.categories__container{
-    display: grid;
-    grid-template-columns: 40% 60%;
-}
-.categories__left{
-    margin-right: 4rem;
-}
-
-.categories__left p {
-    margin: 1rem 0 3rem;
-}
-
-.categories__right{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.2rem;
-}
-
-.category{
-    background-color: var(--color-bg2);
-    padding: 2rem;
-    border-radius: 2rem;
-    transition: var(--transition);
-}
-
-.category:hover{
-    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
-    z-index: 1;
-}
-
-.category__icon{
-    background-color: var(--color-primary);
-    padding: 0.7rem;
-    border-radius: 0.9rem;
-}
-
-.category:nth-child(2) .category__icon{
-    background: var(--color-danger);
-}
-
-.category:nth-child(3) .category__icon{
-    background: var(--color-success);
-}
-
-.category:nth-child(4) .category__icon{
-    background: var(--color-warning);
-}
-
-.category:nth-child(5) .category__icon{
-    background: var(--color-success);
-}
-
-.category__icon{
-    background: var(--color-primary);
-    padding: 0.7rem;
-    border-radius: 0.9rem;
-}
-
-.category h{
-    margin: 2rem 0 1rem;
-}
-
-.category p{
-    font-size: 0.58rem;
-}
-
-.services{
-    margin-top: 10rem;
-}
-
-.services__container{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-}
-
-.services .box-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-}
-
-.services .box-container .box{
-    flex: 1 1 30rem;
-    border-radius: 0.5rem;
-    background: var(--color-primary);
-    box-shadow: 0.5rem 1rem rgba(0, 0, 0, 1);
-    border: 1rem solid rgba(0, 0, 0, 2);
-    text-align: center;
-    padding: 2rem;
-}
-
-.services .box-container .box p{
-    font-size: 1.5rem;
-    color: #666;
-    padding: 5rem 0;
-    line-height: 2;
-}
-
-.faqs__container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-}
-
-.faq{
-    padding: 2rem;
-    display: flex;
-    align-items: center;
-    gap: 1.4em;
-    height: fit-content;
-    background: var(--color-primary);
-    cursor: pointer;
-}
-
-.faq h4{
-    font-size: 1rem;
-    line-height: 1.2rem;
-}
-
-.faq__icon{
-    align-self: flex-start;
-    font-size: 1.2rem;
-}
-
-.faq p{
-    margin-top: 0.8rem;
+nav button {
     display: none;
 }
 
-.faq.open p{
-    display: block;
-}
-
-.testimonials__container{
-    overflow-x: hidden;
-    position: relative;
-    margin-bottom: 5rem;
-}
-
-.testimonials{
-    padding-top: 2rem;
-}
-
-.avatar{
-    width: 6rem;
-    height: 6rem;
-    border-radius: 50%;
-    overflow: hidden;
-    margin: 0 auto 1rem;
-    border-radius: 1rem solid var(--color-bg1);
-}
-
-.testimonial__info{
-    text-align: center;
-}
-
-.testimonial__body{
-    background: var(--color-primary);
-    padding: 2rem;
-    margin-top: 3rem;
-    position: relative;
-}
-
-.testimonial__body{
-    background: var(--color-primary);
-    padding: 2rem;
-    margin-top: 3rem;
-    position: relative;
-}
-
-.testimonial__body::before{
-    content: '';
-    display: block;
-    background: linear-gradient(
-        -134deg,
-        transparent,
-        var(--color-primary),
-        var(--color-primary),
-        var(--color-primary),
-    );
-    position: absolute;
-    top: -1.5rem;
-    left: 50%;
-    transform: rotate(45deg);
-    width: 3rem;
-    height: 3rem;
-}
-
-@media screen and (max-width: 1024px){
-    .container{
-        width: var(--container-width-md);
-    }
-    h1{
-        font-size: 2.2rem;
-    }
-    h2{
-        font-size: 1.4rem;
-    }
-    h4{
-        font-size: 1.2rem;
-    }
-
-    nav button{
+@media scree and (max-width: 1024px) {
+    nav button {
         display: inline-block;
         background: transparent;
         font-size: 1.8rem;
@@ -363,10 +62,7 @@ header{
         cursor: pointer;
     }
 
-    nav button#close-menu-btn{
-        display: none;
-    }
-    .nav__menu{
+    .nav__menu {
         position: fixed;
         top: 5rem;
         right: 5%;
@@ -377,7 +73,7 @@ header{
         display: none;
     }
 
-    .nav__menu li{
+    .nav__menu li {
         width: 100%;
         height: 5.8em;
         animation: animateNavItems 400ms linear forwards;
@@ -385,26 +81,7 @@ header{
         opacity: 0;
     }
 
-    .nav__menu li:nth-child(2){
-        animation: delay 200ms;
-    }
-    .nav__menu li:nth-child(3){
-        animation: delay 400ms;
-    }
-    .nav__menu li:nth-child(4){
-        animation: delay 600ms;
-    }
-
-    @keyframes animateNavItems {
-        0%{
-            transform: rotateZ(-90deg) rotateX(90deg) scale(0.1);
-        }
-        100%{
-            transform: rotateZ(0deg) rotateX(0deg) scale(0.1);
-            opacity: 1;
-        }
-    }
-    .nav__menu li a{
+    .nav__menu li a {
         background: var(--color-primary);
         box-shadow: -4rem 6rem 10rem rgba(0, 0, 0, 0.6);
         width: 100%;
@@ -412,79 +89,232 @@ header{
         display: grid;
         place-items: center;
     }
-    .nav__menu li a:hover{
+
+    .nav__menu li a:hover {
         background: var(--color-bg2);
         color: var(--color-white);
     }
 
-    header{
-        height: 52vh;
-        margin-bottom: 4rem;
-    }
-    .header__container{
-        gap: 0;
-        padding-bottom: 3rem;
-    }
-    .categories{
-        height: auto;
-    }
-    .categories__container{
-        grid-template-columns: 1fr;
-    }
-    .categories__left{
-        margin-right: 0;
-    }
-    .services{
-        margin-top: 0;
-    }
-    .services__container{
-        grid-template-columns: 1fr;
+    nav button#close-menu-btn {
+        display: none;
     }
 
-    .faqs__container{
-        grid-template-columns: 1fr;
-    }
-    .faq{
-        padding: 1.5rem;
-    }
-    @media screen and (max-width: 600px) {
-        .container{
-            width: var(--container-width-sm);
+    @keyframes animateNavItems {
+        0% {
+            transform: rotateZ(-90deg) rotateX(90deg) scale(0.1);
         }
-
-        .nav__menu{
-            right: 3%;
-        }
-        .header{
-            height: 100vh;
-        }
-        .header__container{
-            grid-template-columns: 1fr;
-            text-align: center;
-            margin-top: 0;
-        }
-
-        .header__left p{
-            margin-bottom: 1.3rem;
-        }
-        .categories__right{
-            grid-template-columns: 1fr 1fr;
-            gap: 0.7rem;
-        }
-        .category{
-            padding: 1rem;
-            border-radius: 1rem;
-        }
-        .category__icon{
-            margin-top: 4px;
-            display: inline-block;
-        }
-        .courses__container{
-            grid-template-columns: 1fr;
-        }
-
-        .testimonial__body{
-            padding: 1.2rem;
+        100% {
+            transform: rotateZ(0deg) rotateX(0deg) scale(1);
+            opacity: 1;
         }
     }
+}
+
+.categories {
+    background: var(--color-bg1);
+    padding: 2rem 0;
+}
+
+.categories__container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1.2rem;
+}
+
+.category {
+    background-color: var(--color-bg2);
+    padding: 2rem;
+    border-radius: 1rem;
+    transition: var(--transition);
+}
+
+.category:hover {
+    box-shadow: 0 3rem 3rem rgba(0, 0, 0, 0.3);
+}
+
+.category__icon {
+    background-color: var(--color-primary);
+    padding: 0.7rem;
+    border-radius: 0.9rem;
+}
+
+.category h5 {
+    margin: 2rem 0 1rem;
+}
+
+.category p {
+    font-size: 0.9rem;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+:root {
+    --color-primary: #6c63ff;
+    --color-success: #00bf8e;
+    --color-warning: #f7c94b;
+    --color-danger: #f75842;
+    --color--danger-variant: rgba(247, 88, 66, 0.4);
+    --color-white: #fff;
+    --color-light: rgba(255, 255, 255, 0.7);
+    --color-black: black;
+    --color-bg: #1f2641;
+    --color-bg1: #2e3267;
+    --color-bg2: #424890;
+    --font-size-h1: 2.4rem;
+    --font-size-h2: 2rem;
+    --font-size-h3: 1.6rem;
+    --font-size-h4: 1.2rem;
+    --font-size-h5: 1rem;
+    --line-height-h1: 2.8rem;
+    --line-height-h2: 2.4rem;
+    --line-height-h3: 2rem;
+    --line-height-h4: 1.6rem;
+    --line-height-h5: 1.2rem;
+    --transition: all 400ms ease;
+}
+
+body {
+    font-family: 'Joan', serif;
+    line-height: 1.7;
+    color: var(--color-white);
+    background: var(--color-bg);
+}
+
+.container {
+    max-width: 80%;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+
+section {
+    text-align: center;
+    margin-bottom: 4rem;
+}
+
+h1 {
+    font-size: var(--font-size-h1);
+    line-height: var(--line-height-h1);
+}
+
+h2 {
+    font-size: var(--font-size-h2);
+    line-height: var(--line-height-h2);
+}
+
+h3 {
+    font-size: var(--font-size-h3);
+    line-height: var(--line-height-h3);
+}
+
+h4 {
+    font-size: var(--font-size-h4);
+    line-height: var(--line-height-h4);
+}
+
+h5 {
+    font-size: var(---font-size-h5);
+    line-height: var(--line-height-h5);
+}
+
+a {
+    color: var(--color-white);
+}
+
+img {
+    width: 100%;
+    display: block;
+    object-fit: cover;
+}
+
+.btn {
+    display: inline-block;
+    background: var(--color-white);
+    color: var(--color-black);
+    padding: 1rem 2rem;
+    border: 1px solid transparent;
+    font-weight: 500;
+    transition: var(--transition);
+}
+
+.btn-primary {
+    background: var(--color-danger);
+    color: var(--color-white);
+}
+
+nav {
+    background: transparent;
+    width: 100vw;
+    height: 5rem;
+    top: 0;
+    position: fixed;
+    z-index: 11;
+}
+
+.nav__container {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+}
+
+nav button {
+    display: none;
+}
+
+.nav__menu {
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+}
+
+nav__menu a {
+    font-size: 0.9rem;
+    transition: all 400ms ease;
+}
+
+.nav__menu a:hover {
+    color: var(--color-bg2);
+}
+
+.window-scroll {
+    background: var(--color-primary);
+    box-shadow: black;
+}
+
+header {
+    position: relative;
+    top: 5rem;
+    overflow: hidden;
+    height: 70vh;
+    margin-bottom: 5rem;
+}
+
+.header__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    gap: 1rem;
+    height: 100%;
+}
+
+.header__left p {
+    margin: 1rem 0 2.4rem;
+}
+
+.categories {
+    background: var(--color-bg1);
+    padding: 2rem 0;
+}
+
+.categories__container {
+    display: grid;
+    grid-template-columns: reapeat(auto-fit, minmax(200px, 1fr));
+    gap: 1.2rem;
 }
