--- a/css/about.css
+++ b/css/about.css
@@ -1,21 +1,21 @@
-.about__achievements{
+.about__achievements {
     margin: 15rem;
 }
-.about__achievements-container{
+.about__achievements-container {
     display: grid;
     grid-template-columns: 40% 60%;
     gap: 5rem;
 }
-.about__achievements-right >p {
+.about__achievements-right > p {
     margin: 1.6rem 0 2.5rem;
 }
-.achievements__cards{
+.achievements__cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
 }
 
-.achievements__card{
+.achievements__card {
     background: var(--color-bg1);
     padding: 1.6rem;
     border-radius: 1rem;
@@ -23,11 +23,11 @@
     transition: var(--transition);
 }
 
-.achievements__card:hover{
+.achievements__card:hover {
     background: var(--color-bg2);
     box-shadow: 0 3rem rgba(0, 0, 0, 0.3);
 }
-.achievement__icon{
+.achievement__icon {
     background: var(--color-danger);
     padding: 0.6rem;
     border-radius: 1rem;
@@ -36,44 +36,42 @@
     font-size: 2rem;
 }
 
-.achievements__card:nth-child(2)
-.achievement__icon{
+.achievements__card:nth-child(2) .achievement__icon {
     background: var(--color-success);
 }
 
-.achievements__card:nth-child(3)
-.achievement__icon{
+.achievements__card:nth-child(3) .achievement__icon {
     background: var(--color-primary);
 }
-.team{
+.team {
     background: var(--color-bg1);
     box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
 }
 
-.team__container{
+.team__container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
 }
 
-.team__member{
+.team__member {
     padding: 2rem;
     background: var(--color-bg2);
-    border: 1px solod transparent;
+    border: 1px solid transparent;
     position: relative;
     transition: var(--transition);
     overflow: hidden;
 }
 
-.team__member:hover{
+.team__member:hover {
     background: transparent;
     border-color: var(--color-primary);
 }
 
-.team__member-image img{
+.team__member-image img {
     filter: saturate(0);
 }
-.team__member:hover img{
+.team__member:hover img {
     filter: saturate(1);
 }
 
@@ -86,7 +84,7 @@
     color: var(--color-light);
 }
 
-.team__member-socials{
+.team__member-socials {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -98,30 +96,30 @@
     box-shadow: -2rem 0 2rem rgba(0, 0, 0, 0.3);
     transition: var(--transition);
 }
-.team__member:hover.team__member-socials{
+.team__member:hover .team__member-socials {
     right: 0;
 }
 
-.team__member-socials a{
+.team__member-socials a {
     padding: 1rem;
 }
-@media screen and (max-width: 1024px){
-    .about__achievements{
+@media screen and (max-width: 1024px) {
+    .about__achievements {
         margin-top: 2rem;
     }
 
-    .about__achievements-container{
+    .about__achievements-container {
         grid-template-columns: 1fr;
         gap: 4rem;
     }
 
-    .about__achievements-left{
+    .about__achievements-left {
         width: 80%;
         margin: 0 auto;
     }
 
-    .team__container{
-        grid-template-colums: repeat(3, 1fr);
+    .team__container {
+        grid-template-columns: fr;
     }
 
     .team__member{
