--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ nav button {
 }
 
 :root {
-    --color-primary: #6c63ff;
+    --color-primary: #052e05;
     --color-success: #00bf8e;
     --color-warning: #f7c94b;
     --color-danger: #f75842;
@@ -166,7 +166,7 @@ nav button {
     --color-black: black;
     --color-bg: #1f2641;
     --color-bg1: #2e3267;
-    --color-bg2: #424890;
+    --color-bg2: #030703;
     --font-size-h1: 2.4rem;
     --font-size-h2: 2rem;
     --font-size-h3: 1.6rem;
@@ -347,5 +347,53 @@ header {
 .question__answer h5 {
     margin: 0;
     font-size: 0.9em;
+    color: #555;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.testimonials__container {
+    text-align: center;
+}
+
+.swipe-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.testimonial {
+    flex: 1 1 calc(33.333% - 20px);
+    box-sizing: border-box;
+    background: #000502;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-width: 300px;
+}
+
+.avater img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+
+.testimonial__info h5 {
+    margin: 10px 0 5px;
+}
+
+.testimonial__info small {
+    color: #888;
+}
+
+.testimonial__body p {
+    margin-top: 10px;
+    font-size: 14px;
     color: #555;
 }
