--- a/public/style.css
+++ b/public/style.css
@@ -96,31 +96,73 @@ nav a {
 
 .services {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: column;
+  gap: 20px;
 }
 
-.service-items {
-  flex: 1 0 21%;
-  box-sizing: border-box;
-  margin: 20px;
-  padding: 20px;
+.service-item {
   border: 1px solid #ccc;
+  padding: 20px;
   border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+}
+
+.service-content {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
   text-align: center;
 }
 
-.service-items img {
+.service-item img {
   max-width: 100%;
   height: auto;
   border-radius: 10px;
 }
 
-.service-items h3 {
+.service-item h3 {
   margin: 10px 0;
+  font-size: 1.2rem;
+}
+
+.service-item p {
+  font-size: 0.9em;
 }
 
 .cart {
   margin-top: 40px;
   border-top: 1px solid #ccc;
   padding-top: 20px;
+}
+
+.cart ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.cart li {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.cart button {
+  margin-left: 10px;
+}
+
+@media (max-width: 768px) {
+  .service-item {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .service-item img {
+    margin-bottom: 10px;
+  }
+
+  .service-content {
+    margin: 0;
+  }
 }
